--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brian Tum</title>
 <script src="https://kit.fontawesome.com/03d93361dc.js" crossorigin="anonymous"></script>
-    <script type="module" crossorigin src="/assets/index.45bb986e.js"></script>
-    <link rel="stylesheet" href="/assets/index.5bf9690f.css">
+    <script type="module" crossorigin src="/personal/assets/index.45bb986e.js"></script>
+    <link rel="stylesheet" href="/personal/assets/index.5bf9690f.css">
   </head>
   <body>
     <div id="app"></div>
