--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/logo/b-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brian Tum</title>
 <script src="https://kit.fontawesome.com/03d93361dc.js" crossorigin="anonymous"></script>
