--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/personal/logo/b-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brian Tum</title>
 <script src="https://kit.fontawesome.com/03d93361dc.js" crossorigin="anonymous"></script>
     <script type="module" crossorigin src="/personal/assets/index.47a5b921.js"></script>
-    <link rel="stylesheet" href="/personal/assets/index.23cbd15d.css">
+    <link rel="stylesheet" href="/personal/assets/index.113a114d.css">
   </head>
   <body>
     <div id="app"></div>
