--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/personal/logo/b-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brian Tum</title>
+    <title>Tum</title>
 <script src="https://kit.fontawesome.com/03d93361dc.js" crossorigin="anonymous"></script>
-    <script type="module" crossorigin src="/personal/assets/index.1e1c4eb3.js"></script>
-    <link rel="stylesheet" href="/personal/assets/index.96c39619.css">
+    <script type="module" crossorigin src="/personal/assets/index.154e9df1.js"></script>
+    <link rel="stylesheet" href="/personal/assets/index.97cbaa8f.css">
   </head>
   <body>
     <div id="app"></div>
